<resources>
    <string name="app_name">Github Users</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
</resources>