<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />
        <item android:id="@+id/favorite"
            android:title="@string/favorite"
            android:icon = "@drawable/ic_favorite_24"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/setting"
            android:title="@string/setting"
            android:icon = "@drawable/ic_settings_24"
            app:showAsAction="ifRoom" />
    </group>
</menu>